Fixed video grid items alignment

--- a/hackathon/src/components/VideoGrid/index.scss
+++ b/hackathon/src/components/VideoGrid/index.scss
@@ -1,4 +1,5 @@
 .video-grid-container {
+    align-items: center;
     display: flex;
     flex-flow: row;
     flex-wrap: wrap;
